Fixed issues with role bieng null because fucntion was using deprecated library. added mappers

--- a/RCCM/appsettings.json
+++ b/RCCM/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=DESKTOP-QC27GKS\\SQLEXPRESS;Database=RCCM_Dev;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=LAPTOP-4EGKPV6G;Database=RCCM_Dev;Trusted_Connection=True;MultipleActiveResultSets=True"
 
   },
   "AllowedHosts": "*"
