--- a/RCCM/appsettings.json
+++ b/RCCM/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=MININT-QDSMJIQ\\SQLEXPRESS;Database=RCCM;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=ALHEBSHI\\SQLEXPRESS;Database=RCCM;Trusted_Connection=True;MultipleActiveResultSets=True;"
 
   },
   "AllowedHosts": "*"
