--- a/RCCM/appsettings.json
+++ b/RCCM/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=.;Database=RCCM_Dev;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=DESKTOP-CIGTTDC;Database=RCCM_Dev;Trusted_Connection=True;MultipleActiveResultSets=True"
 
   },
   "AllowedHosts": "*"
