--- a/RCCM/appsettings.json
+++ b/RCCM/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=RCCM_Dev;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=LAPTOP-4EGKPV6G;Database=RCCM_Dev;Trusted_Connection=True;MultipleActiveResultSets=True;"
 
   },
   "AllowedHosts": "*"
