--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
 jobs:
   #============================ Building ============================= 
   - job: "Build"
-    pool: "Default"
+    pool: "Azure Pipelines"
     variables:
       BuildConfiguration: "Release"
       BuildProject: "**/*.csproj"
